@startuml Patron_Strategy_Exportacion

interface ExportarStrategy {
    +exportar(String datosReporte)
}

class ExportarPDFStrategy {
    +exportar(String datosReporte)
}

class ExportarExcelStrategy {
    +exportar(String datosReporte)
}

class ExportarCSVStrategy {
    +exportar(String datosReporte)
}

class ReporteExportadorContext {
    - ExportarStrategy strategy
    + setStrategy(ExportarStrategy strategy)
    + ejecutarExportacion(String datos)
}

ExportarStrategy <|.. ExportarPDFStrategy
ExportarStrategy <|.. ExportarExcelStrategy
ExportarStrategy <|.. ExportarCSVStrategy
ReporteExportadorContext --> ExportarStrategy : usa

@enduml